<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".LoginOrRegisterActivity">

    <TextView
        android:text="@string/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/dormitory_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/dormitory_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/bed_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/bed_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
       <Switch
           android:id="@+id/leader"
           android:textOn="true"
           android:textOff="false"
           android:checked="false"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/check_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:onClick="onClick"
            android:clickable="true"
            android:id="@+id/what_you_need_to_know"
            android:text="@string/what_you_need_to_know"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:onClick="onClick"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>