<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlanChooseCreateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_plan"
        android:textSize="20sp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!--    轮流间隔?天-->
    <RadioButton
        android:id="@+id/plan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan1" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan1Content" />


    <RadioButton
        android:id="@+id/plan2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plan2" />


    <LinearLayout
        android:layout_marginLeft="30dp"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1号床值日日期" />

            <Button
                android:id="@+id/startDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="按床位轮流间隔" />

            <EditText
                android:id="@+id/date_between"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="天打扫卫生" />

        </LinearLayout>
    </LinearLayout>


    </RadioGroup><!--    自定义方案  整一个敬请期待吧-->
<Button
style="@style/btn2"
android:id="@+id/create_one"
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:onClick="onClick"
android:text="@string/create_one" />

<Button
style="@style/btn2"
android:id="@+id/make_sure"
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:onClick="onClick"
android:text="@string/make_sure" /></LinearLayout>