<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalenderActivity"
    android:orientation="vertical">


    <com.gigamole.navigationtabstrip.NavigationTabStrip
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:nts_color="#000"
        app:nts_size="15sp"
        app:nts_weight="3dp"
        app:nts_factor="2.5"
        android:id="@+id/navi_calendar"
        app:nts_type="point"
        app:nts_gravity="top"
        app:nts_corners_radius="1.5dp"
        app:nts_animation_duration="300"
        app:nts_active_color="#000"
        app:nts_inactive_color="#c4c4c4"/>


    <!--    这个之后可以改成giridview 看效果，不好就改-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/zeroIcon"
                android:textSize="36sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:text="@string/zero"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="XYDGL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/threeIcon"
                android:textSize="36sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:text="@string/three"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="XYDGL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fourIcon"
                android:textSize="36sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:text="@string/four"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="XYDGL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/fiveIcon"
                android:textSize="36sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:text="@string/five"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="XYDGL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>

    <com.example.dormitorystar.utilcalendarview.CompactCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextSize="12sp"
        app:compactCalendarBackgroundColor="#ffe95451"
        app:compactCalendarTextColor="#fff"
        app:compactCalendarCurrentSelectedDayBackgroundColor="#ffbd5f5f"
        app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
        app:compactCalendarCurrentDayIndicatorStyle="fill_large_indicator"
        app:compactCalendarEventIndicatorStyle="small_indicator"
        app:compactCalendarOtherMonthDaysTextColor="#534c4c"
        app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="true"
        />


</LinearLayout>